[package]
name = "mlimage-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4_flex = { version = "0.11", default-features = false }
ndarray = "0.15.6"
winnow = "0.6.5"
num = "0.4.1"
bytes = "1.6.0"
bytemuck = "1.15.0"
itertools = "0.13.0"

[dev-dependencies]
hexdump = "0.1.1"
