[package]
name = "mlimage-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lz4_flex = { version = "0.11", default-features = false }
ndarray = "0.15.6"
winnow = "0.6.5"
num = "0.4.1"
bytes = "1.6.0"
bytemuck = "1.15.0"
itertools = "0.13.0"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
hexdump = "0.1.1"

[[bench]]
name = "benchmark_reading_large_mlimage"
harness = false
