[package]
name = "mlimage-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lz4_flex = { version = "0.12", default-features = false }
ndarray = "0.17"
winnow = "0.7"
num = "0.4.3"
bytes = "1.11.1"
bytemuck = "1.25.0"
itertools = "0.14.0"
tokio = { version = "1.49.0", features = ["fs", "io-std", "io-util", "rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
hexdump = "0.1.2"

[[bench]]
name = "benchmark_reading_large_mlimage"
harness = false
